# python-docker

./: Dockerfile  app.py  docker-compose.dev.yml  pyproject.toml
.github/workflows/: github_registry.yml
