[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robmel", email = "robme.l@tuta.io"},
]
dependencies = [
    "Flask>=2.0.3",
    "mysql-connector-python>=8.0.28",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
